[project]
name = "InfluencerActions"
version = "0.1.0"
authors = [
  { name = "Brendan Krueger", email = "atleasticanbe@gmail.com" },
]
description = "Adjust a triggered scene's set tempo based on current song tempo."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["clyphx", "clyphx pro", "ableton", "max", "m4l", "max for live"]

[project.urls]
Homepage = "https://github.com/Hyperdimensionals/clyphx_influencer_actions"
Repository = "https://github.com/Hyperdimensionals/clyphx_influencer_actions"
Issues = "https://github.com/Hyperdimensionals/clyphx_influencer_actions/issues"